--- a/src/Components/Eldenring/Eldenring.css
+++ b/src/Components/Eldenring/Eldenring.css
@@ -94,7 +94,6 @@
 }
 
 .golden-order-text {
-  border: 2px solid green;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -182,7 +181,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 150px;
+  /* height: 150px; */
   /* margin-top: 20px; */
 }
 
@@ -199,7 +198,7 @@
 
 .date-text {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: 13px;
   height: 6%;
   width: 40%;
@@ -265,7 +264,8 @@
   transition: all 0.5s;
 }
 .ratings {
-  border: 2px solid red;
+  position: relative;
+  top: 4px;
   /* position: absolute; */
   /* display: flex; */
   /* justify-content: center; */
@@ -285,7 +285,7 @@
 
 @media screen and (max-width:1468px){
   .console-container {
-    border: 2px solid gray;
+    /* border: 2px solid gray; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -294,26 +294,19 @@
     /* margin-top: 40px; */
     width: 100%;
     margin:40px;
+    margin-bottom: 0px;
   }
   
   .consoles {
-    /* border: 2px solid purple; */
-    /* display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center; */
-    /* margin-top: 20px; */
     flex-wrap: wrap;
     height:100%;
     width: 100%;
   }
 
   .date-text {
-    /* border: 2px solid red; */
     display: flex;
     justify-content: center;
     font-size: 13px;
-    /* height: 6%; */
     width: 20%;
     padding: 0px;
     margin: 0px;
@@ -326,11 +319,7 @@
     border: 1px solid white;
     border-radius: 5px;
     cursor: pointer;
-    /* height: 30px; */
     width: auto;
-    /* margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 0px; */
     margin-bottom: 8px;
     padding: 15px;
   }
