--- a/src/Components/KeyFeatures/KeyFeatures.css
+++ b/src/Components/KeyFeatures/KeyFeatures.css
@@ -3,22 +3,26 @@
     text-align: start;
     height: 90%;
     width: 75%;
+    
 }
 
 .keyfeatures-container h1{
-    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-top: 20px;
     font-size: 38px;
 }
 
 .KF-text-container{
-    height: 93%;
-    margin-top: 50px;
-    width: 100%;
+    padding: 4px;
+    /* width: 100%; */
 }
 
 .KF-video-text{
-    height:33%;
-    width: 100%;
+    /* border: 2px solid; */
+    margin-top: 60px;
+    margin-bottom: 60px;
+    /* height:33%; */
+    /* width: 100%; */
 }
 
 .KFVideo-container{
@@ -63,7 +67,7 @@
     background-color: rgb(189, 154, 82);
     text-transform: uppercase;
     font-size: 28px;
-    height: 100%;
+    /* height: 100%; */
     margin: 0px;
     padding-right: 20px;
 }
@@ -85,7 +89,7 @@
     padding-left: 15px;
     margin-left: 105px;
     /* height: 13%; */
-    width: 90%;
+    min-width: 100%;
 }
 
 .video-2-title h2{
@@ -99,12 +103,12 @@
 
 .KF-border-bottom {
     /* border: 2px solid purple; */
-    margin-top: 88px;
+    position: absolute;
+    margin-top: -2.6%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     margin-left: -16%;
-    height: 4%;
     width: 100%;
 }
 
