--- a/src/Components/Characters/Characters.css
+++ b/src/Components/Characters/Characters.css
@@ -22,9 +22,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: nowrap;
   height: 90%;
-  width: 20%;
+  width: 200px;
 }
+
 
 .samurai {
   display: flex;
@@ -53,10 +55,30 @@
 
 @media screen and (max-width: 1024px) {
   .characters-container {
-      justify-content: space-between;
+      justify-content: center;
+      text-align: center;
   }
 
+  .characters-title {
+    /* border: 2px solid red; */
+    font-size: 30px;
+    /* margin-bottom: 700px; */
+    margin-left: 0px;
+  }
+
+
+  
+  .samurai{
+    order: 0;
+  }
+  .warrior{
+    display: none;
+    order: 1;
+  }
   .wretch {
+    display: none;
+  }
+  .prophet {
     display: none;
   }
   .hero {
