--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,12 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 4000px;
+  /* height: 4000px; */
   max-width: 100vw;
+}
+
+@media screen and (max-width:1200px){
+  .shopnow-component{
+    /* height: 100vh; */
+  }
 }
