--- a/src/Components/StickyOverlay/Overlay.css
+++ b/src/Components/StickyOverlay/Overlay.css
@@ -13,14 +13,12 @@
 }
 
 .navigation-dots{
-    /* border: 2px solid red; */
     width: 50%;
     height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .dot{
@@ -79,4 +77,64 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
+}
+
+@media screen and ( max-width:600px ) {
+    .navigation-dots{
+        /* border: 2px solid red; */
+        width: 50%;
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    .helper-icons-container{
+        /* border: 2px solid red; */
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+        height: 50%;
+        width: 100%;
+    }
+
+    .dot{
+        background-color: #FFFFFF;
+        border-radius: 50%;
+        height: 6px;
+        margin-bottom: 30px;
+        width: 6px;
+    }
+    
+    .selected{
+        background-color: rgb(193,157,83);
+        border: 1px solid rgb(193,157,83);
+        background-clip: content-box;
+        padding: 3px;
+        position: relative;
+        left: 4px;
+    }
+    
+    .helper-icons{
+        /* border: 2px solid red; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        border-radius: 50%;
+        height: 55px;
+        width: 55px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
+    .shopping-icon{
+        background-color: rgb(193,157,83);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
 }
